Bug 180336 - UNDO/REDO not working right when editing images
Summary: UNDO/REDO not working right when editing images
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: ImageEditor-Undo (other bugs)
Version First Reported In: 0.10.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-11 16:05 UTC by Matti Kettunen
Modified: 2017-08-08 08:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matti Kettunen 2009-01-11 16:05:27 UTC
Version:           0.10.0-beta8 (using KDE 4.1.3)
OS:                Linux
Installed from:    SuSE RPMs

Sometimes UNDO/REDO doesn't work right.

For example:
- I crop an image and click undo
- I change image to black and white and click undo
 
Now clicking redo should turn image to B/W again, but digikam crops the image!

With one (and only) action undo/redo works as it should, but if there has been more image manipulation actions you'll never know what 'redo' will do.
Comment 1 Mikolaj Machowski 2009-01-11 16:59:40 UTC
Confirming for svn 909195
Comment 2 Marcel Wiesweg 2009-01-13 17:08:05 UTC
SVN commit 910560 by mwiesweg:

Remove existing entry in undo cache before adding a new one

BUG: 180336

 M  +1 -0      undomanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=910560