Remove existing entry in undo cache before adding a new one

BUG: 180336

svn path=/trunk/extragear/graphics/digikam/; revision=910560